--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,69 @@
-numpy==1.21.3
-aiohttp>=3.7.4
+aiohttp==3.8.1
+aiosignal==1.2.0
+AllanTools==2019.9
 apptools==5.1.0
-async-timeout==3.0.1
+asttokens==2.0.5
+async-timeout==4.0.2
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
 backcall==0.2.0
+black==21.12b0
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.7
+click==8.0.3
 cmocean==2.0
 configobj==5.0.6
 constantly==15.1.0
 cryptography==35.0.0
 cycler==0.10.0
+Cython==0.29.27
+-e git+https://github.com/virati/DBSpace.git@b6a3f27ab13b1b8aa9196310e0162259a1e4c4d5#egg=DBSpace
+debugpy==1.5.1
 decorator==5.1.0
+entrypoints==0.3
 envisage==6.0.1
+executing==0.8.3
+frozenlist==1.2.0
 h5py==3.5.0
 hyperlink==21.0.0
 idna==3.3
 importlib-metadata==4.8.1
 importlib-resources==5.3.0
 incremental==21.3.0
-ipython==7.28.0
+ipykernel==6.7.0
+ipython==8.2.0
 jedi==0.18.0
 joblib==1.1.0
+jupyter-client==7.1.2
+jupyter-core==4.9.1
 kiwisolver==1.3.2
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
 mne==0.11.0
 multidict==5.2.0
+mypy-extensions==0.4.3
+nest-asyncio==1.5.4
 networkx==2.6.3
 nibabel==3.2.1
 nilearn==0.8.1
+nitime==0.9
 nose==1.3.7
+numpy==1.21.3
 packaging==21.0
 pandas==1.3.4
 parso==0.8.2
+pathspec==0.9.0
 patsy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.4.0
+Pillow==9.0.1
+platformdirs==2.4.1
 prompt-toolkit==3.0.21
 ptyprocess==0.7.0
+pure-eval==0.2.2
 pycparser==2.20
 pyface==7.3.0
 Pygments==2.10.0
@@ -54,18 +74,24 @@ PyQt5-sip==12.9.0
 python-dateutil==2.8.2
 pytz==2021.3
 PyWavelets==1.1.1
+pyzmq==22.3.0
+QtPy==2.0.0
 requests==2.26.0
 scikit-learn==1.0
 scipy==1.7.1
 seaborn==0.11.2
 six==1.16.0
+sklearn==0.0
+stack-data==0.2.0
 statsmodels==0.13.0
 tensorly==0.6.0
 threadpoolctl==3.0.0
+tomli==1.2.3
+tornado==6.1
 traitlets==5.1.0
 traits==6.3.1
 traitsui==7.2.1
-Twisted==21.7.0
+Twisted==22.2.0
 txaio==21.2.1
 typing-extensions==3.10.0.2
 urllib3==1.26.7
