--- a/requirements.txt
+++ b/requirements.txt
@@ -20,11 +20,12 @@ constantly==15.1.0
 cryptography==35.0.0
 cycler==0.10.0
 Cython==0.29.27
--e git+https://github.com/virati/DBSpace.git@b6a3f27ab13b1b8aa9196310e0162259a1e4c4d5#egg=DBSpace
+-e git+https://github.com/virati/DBSpace.git@e97355fcec2299e03ba59a77686028bdff0ff0b1#egg=DBSpace
 debugpy==1.5.1
 decorator==5.1.0
 entrypoints==0.3
 envisage==6.0.1
+et-xmlfile==1.1.0
 executing==0.8.3
 frozenlist==1.2.0
 h5py==3.5.0
@@ -52,6 +53,7 @@ nilearn==0.8.1
 nitime==0.9
 nose==1.3.7
 numpy==1.21.3
+openpyxl==3.0.9
 packaging==21.0
 pandas==1.3.4
 parso==0.8.2
@@ -91,7 +93,7 @@ tornado==6.1
 traitlets==5.1.0
 traits==6.3.1
 traitsui==7.2.1
-Twisted==22.2.0
+Twisted==22.4.0rc1
 txaio==21.2.1
 typing-extensions==3.10.0.2
 urllib3==1.26.7
