--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,6 +47,7 @@
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"mounts": [
-		"type=bind,source=/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/DBSpace,target=/home/vscode/dbspace"
+		"type=bind,source=/home/virati/Dropbox/projects/Research/MDD-DBS/Ephys/DBSpace,target=/home/vscode/dbspace",
+		"type=bind,source=/home/virati/Dropbox/projects/Research/MDD-DBS/Data,target=/home/vscode/data"
 	]
 }
