--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.1
 cycler==0.11.0
 Cython==0.29.32
--e git+https://github.com/virati/DBSpace.git@33afad329ce67a859f4ab86f9aef87d6b7f73c86#egg=dbspace
+dbspace==0.2.1
 debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
